@@ -199,7 +199,7 @@ class Bead(_state: BeadState,
 
   def getPotentialEnergy = mass * gravity * position2D.y
 
-  def getKineticEnergy = 1 / 2 * mass * velocity * velocity
+  def getKineticEnergy = 1.0 / 2.0 * mass * velocity * velocity
 
   def getAngle = attachState.getAngle
 
